make dropdown size fixed, otherwise it jumps around when connecting/disconnecting devices

--- a/src/RightSidebar.css
+++ b/src/RightSidebar.css
@@ -12,6 +12,10 @@
   flex-direction: column;
 }
 
+.RightSidebar select {
+  width: 150px;
+}
+
 .RightSidebar-optionsGroup {
   font-size: 0.8em;
   margin-bottom: 4px;
